--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "@moefe/vue-aplayer": "^2.0.0-beta.5",
+    "aplayer": "^1.10.1",
+    "axios": "^0.22.0",
+    "babel-plugin-import": "^1.13.3",
+    "element-ui": "^2.15.6",
+    "hls.js": "^1.0.11",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-aplayer": "^1.6.1",
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "core-js": "^3.18.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
