--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.15.6",
     "hls.js": "^1.0.11",
     "js-md5": "^0.7.3",
+    "less": "^4.1.2",
     "vue": "^2.6.11",
     "vue-aplayer": "^1.6.1",
     "vue-lazyload": "^1.3.3",
@@ -25,6 +26,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "core-js": "^3.18.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0"
   }
 }
